<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.addorupdatestuff.AddOrUpdateAgentFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/addProfileImg"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginTop="36dp"
            android:contentDescription="@string/Agents"
            android:src="@drawable/ic_person_add_black_24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.467"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout

            android:id="@+id/agentIdTxtInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_marginStart="@dimen/_32sdp"
            android:layout_marginEnd="@dimen/_32sdp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addProfileImg">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/agentIdEdtTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/id_txt"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/agentFirstNameInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_marginStart="@dimen/_32sdp"
            android:layout_marginEnd="@dimen/_32sdp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toStartOf="@+id/agentIdTxtInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/agentIdTxtInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/agentFirstNameEdtTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/agentFamilyNameInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginStart="@dimen/_32sdp"
            android:layout_marginEnd="@dimen/_32sdp"
            android:hint="@string/family_name_txt"
            app:layout_constraintStart_toStartOf="@id/agentFirstNameInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/agentFirstNameInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/agentFamilyNameEdtTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"

                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/agentEmailInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginStart="@dimen/_32sdp"
            android:layout_marginEnd="@dimen/_32sdp"
            app:layout_constraintEnd_toEndOf="@id/agentFamilyNameInputLayout"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@id/agentFamilyNameInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/agentFamilyNameInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/agentEmailEditTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_prompt"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/agentMobileInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_marginStart="@dimen/_32sdp"
            android:layout_marginEnd="@dimen/_32sdp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:hint="@string/number_prompt"
            app:layout_constraintEnd_toEndOf="@id/agentEmailInputLayout"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/agentEmailInputLayout"
            app:layout_constraintTop_toBottomOf="@id/agentEmailInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/agentMobileEdtTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone" />
        </com.google.android.material.textfield.TextInputLayout>
        <TextView
            android:id="@+id/gender_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:autoSizeTextType="uniform"
            android:text="@string/gender_txt"
            android:textColor="@color/colorPrimary"
            app:layout_constraintStart_toStartOf="@+id/agentMobileInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/agentMobileInputLayout" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/agentGenderRadioGroup">

            <Button
                android:id="@+id/cancel_btn"
                style="@style/CancelButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:hint="@string/cancel_btn_txt"
                android:paddingStart="32dp"
                android:paddingEnd="32dp"
                android:textColorHint="@color/colorWhite" />

            <Button
                android:id="@+id/addOrUpdateAgentBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:hint="@string/add_txt"
                android:paddingStart="40dp"
                android:paddingEnd="40dp"
                android:textColorHint="@color/colorWhite" />
        </LinearLayout>

        <RadioGroup
            android:id="@+id/agentGenderRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@+id/gender_txt"
            app:layout_constraintEnd_toEndOf="@+id/agentMobileInputLayout"
            app:layout_constraintStart_toEndOf="@+id/gender_txt"
            app:layout_constraintTop_toTopOf="@+id/gender_txt">

            <RadioButton
                android:id="@+id/agentFemaleRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:checked="true"
                android:text="@string/female_txt"
                tools:layout_editor_absoluteX="136dp"
                tools:layout_editor_absoluteY="154dp" />

            <RadioButton
                android:id="@+id/agentMaleRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male_txt"
                tools:layout_editor_absoluteX="136dp"
                tools:layout_editor_absoluteY="154dp" />

        </RadioGroup>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>