<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/edit_txt" android:id="@+id/editAgent"/>
    <item android:title="@string/link_to_facility_txt" android:id="@+id/linkToFacility"/>
    <item android:title="@string/delete_txt" android:id="@+id/deleteAgent"/>
</menu>