...
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent">

      <androidx.recyclerview.widget.RecyclerView
          android:id="@+id/agentsListRecyclerView"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />
   </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
   <com.google.android.material.floatingactionbutton.FloatingActionButton
       android:id="@+id/addAgentFab"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_gravity="bottom|end"
       android:layout_margin="@dimen/fab_margin"
       android:src="@drawable/ic_plus"
       android:backgroundTint="@color/colorPrimary"
...
